clusters/cluster/apps/passwords/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: passwords
  labels:
    app: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
